# prs-connector-core

./: .buildinfo  .coverage  .gitignore  Pipfile  README.md  baseconnector_class.html  conftest.py  coverage.xml  create_new_connector.html  description.html  genindex.html  index.html  message_format.html  objects.inv  pyproject.toml  pytest.ini  registration.html  requirements.txt  search.html  searchindex.js  taggroupreaderconnector_class.html  tst.py  work_logic.html
.github/workflows/: build_sphinx_docs.yml  release.yml  test.yml
_sources/: baseconnector_class.rst.txt  create_new_connector.rst.txt  description.rst.txt  message_format.rst.txt  taggroupreaderconnector_class.rst.txt  work_logic.rst.txt
_static/: documentation_options.js
debug/: deb_buffer.py
deployment/docker/: Dockerfile.example  README.md  compose.example.yml
deployment/systemd/: README.md  prs-connector@.service.example
docs/source/: baseconnector_class.rst  conf.py  create_new_connector.rst  index.rst  message_format.rst  multi_instance_launch.rst  prs_indux_connector.py  registration.rst  taggroupreaderconnector_class.rst  work_logic.rst
docs/source/requests/: addConnectorIn.txt  addConnectorOut.txt
prs_connector_core/: __init__.py  buffer.py  config.py  connector.py  data_handler.py  exceptions.py  logger.py  times.py  websocket_client.py
prs_connector_core.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_buffer.py  test_config.json  test_config.py  test_connector.py  test_connector_config.py  test_data_handler.py  test_exceptions.py  test_metrics.py  test_platform_config.py  test_websocket.py
